feat(Problem6.java): 중복된 닉네임의 User의 이메일를 결과 리스트에 넣는 기능 구현